# src/routes/index.js
@@ -16,7 +16,8 @@ router.post('/send', messageController.sendMessage)
 router.post('/send-bulk', messageController.sendBulkMessage)
 router.get('/groups/:sessionId', messageController.listGroups)
 router.get('/contacts/:sessionId', messageController.listContacts)
-router.get('/check-number/:sessionId/:number', messageController.checkNumber)
+router.post('/check-number', messageController.checkNumber)
 router.post('/send-contact', messageController.sendContact)
+router.post('/set-typing', messageController.setTyping)
 
 export default router
